include floats in computation of visible flow Region.

BUG: 172693

svn path=/trunk/KDE/kdelibs/; revision=969354